fix(jobsdbFooter): fix footer padding issue on tablet (#235)
* fix(jobsdbFooter): fix footer padding issue on tablet

* fix(footer): restore action tray offset

* fix(footer): restore action tray offset

--- a/jobsDB/Footer/FooterHK/FooterHK.less
+++ b/jobsDB/Footer/FooterHK/FooterHK.less
@@ -19,21 +19,22 @@
 
 .upperWrapper {
   padding-top: @wrapper-up-padding-top;
+  padding-bottom: @wrapper-low-vertical-padding;
 }
 
 .lowerWrapper {
-  display: flex;
-  justify-content: space-between;
-  padding: @wrapper-low-vertical-padding 0;
-  @media @mobile {
-    display: block;
-    padding-top: 0;
+  display: block;
+  padding: 0 0 @wrapper-low-vertical-padding;
+  @media @desktop {
+    display: flex;
+    justify-content: space-between;
   }
 }
 
 .copyright {
   text-align: center;
-  @media @mobile {
-    padding-top: @copyright-padding-top;
+  padding-top: @copyright-padding-top;
+  @media @desktop {
+    padding-top: 0;
   }
 }
