--- a/jobsDB/Footer/FooterHK/components/UpperFooter/UpperFooter.less
+++ b/jobsDB/Footer/FooterHK/components/UpperFooter/UpperFooter.less
@@ -13,10 +13,6 @@
   padding: 0;
   margin: 0 auto;
   flex: 1;
-  @media @mobile {
-    margin: inherit;
-    padding-bottom: @wrapper-low-vertical-padding;
-  }
 }
 
 .firstCategory:extend(.category) {
